- Fixed: [#2405] Item suction behaviour for items with a max stack size lower than 64